    - Update to handle 'getDescription().getPermissions(') returning a list (CB 1172).
    - Fix for null in PLAYER_TELEPORT for bukkit perms.
    - Fixed wasteful updating of perms on a manload.
    - manulistp now accepts an additional + to list ALL Superperms effective permissions (/manulistp <name> +).
    - manucheckp also outputs superperms results.
    - Removed superperms update on plugins unloading. Unneeded and created undesired lag on shutdown.
    - Added a BukkitPermsUpdateTask to only update superperms once on a load/reload.
    - Fix for GM not checking inheritance for known superperms nodes.
    - Optimized getAllPlayersPermissions and fixed pushing unknown perms to superperms.
v 1.2:
	- Changed priority of Registered events to lowest.
	- Fixed an issue with superperms where plugins define perms with inheritance after the root perms
v 1.3:
	- Rewrote Config loading to use Bukkits Configuration features
	- Added an opOverride setting in config.
	  If present and set to false, op's will not get overriding permissions in GroupManager.
	  (one op will not be able to alter another op's settings)
	- GM will now create all relevant world data files for non mirrored worlds.
	  (for all worlds named in config.yml)
	- Attempt to stop GM wiping groups/users yml's on a bad shut down.
	- Added event handling to manage new world creation at runtime.
	- Added the ability to handle unknown worlds at server start.
	  (GM will create the data files for any worlds it finds which are not in the config.yml)
	- Fix for Bukkit passing a null To location on a player Portaling
	- Fixed manudelsub not correctly selecting the group to remove.
	- Added two new permission nodes - groupmanager.notify.self & groupmanager.notify.other
	  These allow players/admins to be notified when players are moved between groups.
v 1.4:
	- Updated for Bukkits new YamlConfiguration.
	- Cleared remaining Cast errors cause by object cloning.