@@ -2,6 +2,9 @@ settings:
   config:
     # With this enabled anyone set as op has full permissions when managing GroupManager
     opOverrides: true
+    # If enabled any bukkit permissiosn which default to true will be left enabled.
+    # If the player is op any permissions set to Op will follow suit.
+    bukkit_perms_override: false
   data:
     save:
       # How often GroupManager will save it's data back to groups and users.yml
